Added Jupyter dashboard and updated dataset

--- a/data/result_analyzer.ipynb
+++ b/data/result_analyzer.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 🎓 Student Result Analyzer Dashboard\n",
-    "Analyze students' marks, calculate totals and grades, and visualize performance using Python, Pandas, and Matplotlib.\n"
+    "Analyze students marks calculate totals and grades and visualize performance using Python, Pandas, and Matplotlib.\n"
    ]
   },
   {
