Edited the code

--- a/data/result_analyzer.ipynb
+++ b/data/result_analyzer.ipynb
@@ -19,7 +19,103 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# --- CONFIGURATION ---\n",
+    "DATA_FILE_PATH = \"data/marks.csv\"\n",
+    "IMAGE_DIR = \"images/\"\n",
+    "\n",
+    "# --- DATA LOADING & CLEANING ---\n",
+    "try:\n",
+    "    df = pd.read_csv(DATA_FILE_PATH)\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: Data file not found at {DATA_FILE_PATH}\")\n",
+    "    exit()\n",
+    "\n",
+    "# --- DATA ANALYSIS ---\n",
+    "# Calculate Total and Average Marks\n",
+    "# iloc[:, 1:] selects columns starting from the second one (assuming the first is 'Name')\n",
+    "NUM_SUBJECTS = df.shape[1] - 1\n",
+    "df['total_marks'] = df.iloc[:, 1:].sum(axis=1)\n",
+    "df['average_mark'] = df['total_marks'] / NUM_SUBJECTS\n",
+    "\n",
+    "# Function to assign grades based on average mark\n",
+    "def assign_grade(average):\n",
+    "    \"\"\"Assigns a letter grade based on the student's average mark.\"\"\"\n",
+    "    if average >= 85:\n",
+    "        return \"A\"\n",
+    "    elif average >= 70:\n",
+    "        return \"B\"\n",
+    "    elif average >= 60:\n",
+    "        return \"C\"\n",
+    "    elif average >= 50:\n",
+    "        return \"D\"\n",
+    "    else:\n",
+    "        return \"F\"\n",
+    "\n",
+    "# Apply grade assignment\n",
+    "df['grade'] = df['average_mark'].apply(assign_grade)\n",
+    "\n",
+    "# --- RESULTS SUMMARY ---\n",
+    "print(\"--- Student Result Analysis ---\")\n",
+    "print(\"\\nAnalyzed Data:\")\n",
+    "print(df)\n",
+    "print(\"\\nClass Average Mark:\", round(df['average_mark'].mean(), 2))\n",
+    "print(\"-----------------------------\\n\")\n",
+    "\n",
+    "# --- VISUALIZATION ---\n",
+    "\n",
+    "# 1. Bar Chart: Total Marks of Students\n",
+    "def plot_total_marks_bar_chart(data_frame):\n",
+    "    \"\"\"Generates and saves a bar chart for students' total marks.\"\"\"\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    \n",
+    "    # Use standard column names from the data frame\n",
+    "    plt.bar(data_frame['Name'], data_frame['total_marks'], color=\"#1f77b4\")\n",
+    "    \n",
+    "    plt.title(\"Total Marks Distribution Across Students\", fontsize=14)\n",
+    "    plt.xlabel(\"Student Name\", fontsize=12)\n",
+    "    plt.ylabel(\"Total Marks\", fontsize=12)\n",
+    "    plt.grid(axis='y', linestyle='--', alpha=0.6)\n",
+    "    \n",
+    "    # Save the figure to the specified directory\n",
+    "    plt.tight_layout() # Adjusts plot to prevent labels from being cut off\n",
+    "    plt.savefig(f'{IMAGE_DIR}bar_chart_total_marks.png') \n",
+    "    plt.close() # Close the figure to free up memory\n",
+    "\n",
+    "# 2. Pie Chart: Grade Distribution\n",
+    "def plot_grade_distribution_pie_chart(data_frame):\n",
+    "    \"\"\"Generates and saves a pie chart for the grade distribution.\"\"\"\n",
+    "    grade_counts = data_frame['grade'].value_counts()\n",
+    "    \n",
+    "    plt.figure(figsize=(7, 7))\n",
+    "    \n",
+    "    # Custom color palette for consistency\n",
+    "    colors = ['#66b3ff', '#99ff99', '#ffcc99', '#ff9999', '#c2c2f0'][:len(grade_counts)]\n",
+    "    \n",
+    "    plt.pie(\n",
+    "        grade_counts,\n",
+    "        labels=grade_counts.index,\n",
+    "        autopct=\"%1.1f%%\",\n",
+    "        startangle=90,\n",
+    "        colors=colors,\n",
+    "        wedgeprops={'edgecolor': 'black'} # Adds a border for clarity\n",
+    "    )\n",
+    "    plt.title(\"Grade Distribution Across Class\", fontsize=14)\n",
+    "    \n",
+    "    # Save the figure to the specified directory\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{IMAGE_DIR}pie_chart_grade_distribution.png')\n",
+    "    plt.close() # Close the figure\n",
+    "\n",
+    "# Execute the plotting functions\n",
+    "if __name__ == \"__main__\":\n",
+    "    plot_total_marks_bar_chart(df)\n",
+    "    plot_grade_distribution_pie_chart(df)\n",
+    "    print(f\"Charts saved successfully to the '{IMAGE_DIR}' directory.\")"
+   ]
   }
  ],
  "metadata": {
